--- a/public/styles/variables.scss
+++ b/public/styles/variables.scss
@@ -8,7 +8,8 @@ $breakpoint-2xl: 1440px;
 // COLOURS
 
 // Primary colour
-$primary-900: #1F2430; // High text
+// $primary-900: #1F2430; // High text
+$primary-900: #5643cc; // High text
 // $primary-900: #6839EF; // High text
 $primary-900-hover: lighten($primary-900, 10%);
 $primary-light: rgba($primary-900, 0.1);
