--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -111,11 +111,18 @@ a {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.text-gradient-3 { 
+  background: linear-gradient(to right bottom, rgb(0, 0, 0) 30%, rgba(255, 255, 255, 0.38));
+  // background: radial-gradient(40% 70% at 50% 100%, rgba(255, 255, 255, 0.4), rgb(255, 255, 255)) text;;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .text-gradient-0 {
   background: none;
   -webkit-background-clip:initial ;
   -webkit-text-fill-color: initial;
 }
+
 
 hr {border-top: 1px solid $dark-300;}
 
