add mixpanel, optimise landing page images

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -226,3 +226,8 @@
 .gradientSection {
   background: radial-gradient(at bottom, $primary-700, transparent 50vw);
 }
+
+.sectionList {
+  position: sticky;
+  top: 48px;
+}
