--- a/components/profile/Freelance.module.scss
+++ b/components/profile/Freelance.module.scss
@@ -16,7 +16,7 @@
   height: 160px; 
   width: 160px; 
   border-radius: 100%; 
-  border: 4px solid white; 
+  // border: 4px solid white; 
   // box-shadow: $shadow-2;
 }
 .profileCard {
