--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1395,7 +1395,7 @@ textarea {
 
 .modal-header {
   padding: 1.5rem;
-  border-bottom: 1px solid $dark-light;
+  border-bottom: 1px solid transparent;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
