--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -110,22 +110,30 @@ a {
   background: $gradient-1;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-bottom: -0.3rem!important;
+  padding-bottom: 0.3rem;
 }
 .text-gradient-2 { 
   background: $gradient-2;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-bottom: -0.3rem!important;
+  padding-bottom: 0.3rem;
 }
 .text-gradient-3 { 
   background: $gradient-3;
   // background: radial-gradient(40% 70% at 50% 100%, rgba(255, 255, 255, 0.4), rgb(255, 255, 255)) text;;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-bottom: -0.3rem!important;
+  padding-bottom: 0.3rem;
 }
 .text-gradient-0 {
   background: none;
   -webkit-background-clip:initial ;
   -webkit-text-fill-color: initial;
+  margin-bottom: -0.3rem!important;
+  padding-bottom: 0.3rem;
 }
 
 
