hide branding on profile if on subscription

--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1441,6 +1441,7 @@ textarea {
   border: 1px solid $dark-300;
   box-shadow: $shadow-2;
   border-radius: $radius-medium;
+  overflow: hidden;
 }
 
 .dropdownItem {
