--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -23,17 +23,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   white-space: pre-line;
+  letter-spacing: -0.01em;
 }
 h1, h2, h3, h4, h5, h6 {  
   margin-bottom: 1.5rem; 
   line-height: 1.1;
   color: $dark-900; 
-  font-weight: 800;
+  font-weight: 700;
   font-variant-ligatures: none;
   font-family: 'PlusJakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;}
-h1 { font-size: 64px; }
+h1 { font-size: 72px; }
 h2 { font-size: 48px; }
 h3 { font-size: 34px; }
 h4 { font-size: 28px; }
@@ -399,7 +400,7 @@ button.link {
 // Standard buttons
 
 a.btn, input.btn, button.btn { 
-  border-radius: $radius-large;
+  border-radius: $radius-medium;
   padding: 12px 20px;  
   font-size: 20px;
   line-height: 32px;
