--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -33,7 +33,8 @@ h1, h2, h3, h4, h5, h6 {
   font-variant-ligatures: none;
   font-family: 'PlusJakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;}
+  sans-serif;
+  letter-spacing: -0.02em;}
 h1 { font-size: 72px; }
 h2 { font-size: 48px; }
 h3 { font-size: 34px; }
@@ -464,13 +465,15 @@ a.btn, input.btn, button.btn {
       // background: $primary-900; 
       background: $gradient-3;
       color: $white; 
+      box-shadow: rgba(80, 63, 205, 0.0) 0px 1px 16px, inset 0 2px 0px rgba(255,255,255,0.2), inset 0 -2px 0px rgba(0,0,0,0.2);
       svg path {
         fill: $white;
       }
       &:hover {
         color: $white; 
         text-shadow: rgba(0, 0, 0, 0.26) 0px 3px 12px;
-        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px;
+        // box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px;
+        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px, inset 0 2px 0px rgba(255,255,255,0.2), inset 0 -2px 0px rgba(0,0,0,0.2);
       }
     }
     &.medium {
@@ -483,7 +486,7 @@ a.btn, input.btn, button.btn {
       }
       &:hover {
         color: $white; 
-        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px;
+        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px, inset 0 2px 0px rgba(255,255,255,0.2), inset 0 -2px 0px rgba(0,0,0,0.2);
         background: $gradient-3;
         // background: $gradient-3;
         // background: -webkit-linear-gradient(#eee, #333);
