--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -465,7 +465,7 @@ a.btn, input.btn, button.btn {
       // background: $primary-900; 
       background: $gradient-3;
       color: $white; 
-      box-shadow: rgba(80, 63, 205, 0.0) 0px 1px 16px, inset 0 2px 0px rgba(255,255,255,0.2), inset 0 -2px 0px rgba(0,0,0,0.2);
+      box-shadow: rgba(80, 63, 205, 0.0) 0px 1px 16px, inset 0 1px 0px rgba(255,255,255,0.2), inset 0 -1px 0px rgba(0,0,0,0.2);
       svg path {
         fill: $white;
       }
@@ -473,7 +473,7 @@ a.btn, input.btn, button.btn {
         color: $white; 
         text-shadow: rgba(0, 0, 0, 0.26) 0px 3px 12px;
         // box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px;
-        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px, inset 0 2px 0px rgba(255,255,255,0.2), inset 0 -2px 0px rgba(0,0,0,0.2);
+        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px, inset 0 1px 0px rgba(255,255,255,0.2), inset 0 -1px 0px rgba(0,0,0,0.2);
       }
     }
     &.medium {
@@ -486,7 +486,7 @@ a.btn, input.btn, button.btn {
       }
       &:hover {
         color: $white; 
-        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px, inset 0 2px 0px rgba(255,255,255,0.2), inset 0 -2px 0px rgba(0,0,0,0.2);
+        box-shadow: rgba(80, 63, 205, 0.5) 0px 1px 16px, inset 0 1px 0px rgba(255,255,255,0.2), inset 0 -1px 0px rgba(0,0,0,0.2);
         background: $gradient-3;
         // background: $gradient-3;
         // background: -webkit-linear-gradient(#eee, #333);
@@ -1453,6 +1453,25 @@ textarea {
   box-shadow: $shadow-2;
   border-radius: $radius-medium;
   overflow: hidden;
+  position: relative;
+  &.menu-dark {
+    backdrop-filter: blur(10px);
+    background: $dark-800;
+    border: 1px solid $light-400;
+    z-index: 1;
+    :before {
+      z-index: -1;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      // backdrop-filter: blur(10px);
+      background: #292e39;
+      // background: rgba(0,0,0,0.1);
+    }
+  }
 }
 
 .dropdownItem {
@@ -1476,6 +1495,71 @@ textarea {
     svg path{
       fill: $dark-900;
     }
+  }
+  &.dropdownItemDark {
+    color: $light-900;
+    svg path{
+      fill: $light-900;
+    }
+    &:hover, &:focus {
+      background: $light-200;
+      color: $light-900;
+      svg path{
+        fill: $light-900;
+      }
+    } 
+  }
+}
+
+.dropdownItemLow {
+  color: $dark-700;
+  svg path{
+    fill: $dark-700;
+  }
+  &:hover, &:focus {
+    color: $dark-900;
+    svg path{
+      fill: $dark-900;
+    }
+  }
+  &.dropdownItemDark {
+    color: $light-700;
+    svg path{
+      fill: $light-700;
+    }
+    &:hover, &:focus {
+      color: $light-900;
+      svg path{
+        fill: $light-900;
+      }
+    } 
+  }
+}
+
+.dropdownItemHighlight {
+  color: $primary-900;
+  svg path{
+    fill: $primary-900;
+  }
+  &:hover, &:focus {
+    background: $primary-200;
+    color: $primary-900;
+    svg path{
+      fill: $primary-900;
+    }
+  }
+  &.dropdownItemDark {
+    color: $primary-900;
+    svg path{
+      fill: $primary-900;
+    }
+    &:hover, &:focus {
+      background: $primary-400;
+      color: $primary-900;
+      svg path{
+        fill: $primary-900;
+      }
+    } 
   }
 }
 
