--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1368,7 +1368,7 @@ textarea {
 }
 
 .Toastify__toast {
-  border-radius: 0.5rem!important;
+  border-radius: $radius-medium!important;
   display: flex!important;
   padding: 1rem!important;
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
