update styles on profile

--- a/components/profile/Freelance.module.scss
+++ b/components/profile/Freelance.module.scss
@@ -78,6 +78,12 @@
     cursor: pointer;
     background: $dark-300;
   }
+  &.contentCardDark {
+    background: $light-200;
+    &:hover {
+      background: $light-300;
+    }
+  }
 }
 
 .featuredGrid {
