--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -81,9 +81,12 @@ a {
 .text-dark-dis { color: $dark-600; }
 
 .text-light-high { color: $light-900; }
-.text-light-med { color: $light-800; }
-.text-light-low { color: $light-700; }
-.text-light-dis { color: $light-600; }
+// .text-light-med { color: $light-800; }
+.text-light-med { color: #989cae; }
+// .text-light-low { color: $light-700; }
+.text-light-low { color: #7c8198; }
+// .text-light-dis { color: $light-600; }
+.text-light-dis { color: #5a5e72; }
 
 .text-primary-high { color: $primary-900; }
 .text-primary-med { color: $primary-800; }
@@ -260,9 +263,12 @@ hr {border-top: 1px solid $dark-300;}
 .fill-dark-100 { fill: $dark-100; }
 
 .fill-light-900 { fill: $light-900; }
-.fill-light-800 { fill: $light-800; }
-.fill-light-700 { fill: $light-700; }
-.fill-light-600 { fill: $light-600; }
+// .fill-light-800 { fill: $light-800; }
+.fill-light-800 { fill: #989cae; }
+// .fill-light-700 { fill: $light-700; }
+.fill-light-700 { fill: #7c8198; }
+// .fill-light-600 { fill: $light-600; }
+.fill-light-600 { fill: #5a5e72; }
 .fill-light-500 { fill: $light-500; }
 .fill-light-400 { fill: $light-400; }
 .fill-light-300 { fill: $light-300; }
