--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -1577,7 +1577,7 @@ textarea {
           content: '';
           position: absolute;
           top: 0; right: 0; bottom: 0; left: 0;
-          background: $light-400;
+          background: $light-100;
           border-radius: calc($radius-medium - 0.5px); /* !importanté */
         }
       }
@@ -1596,7 +1596,7 @@ textarea {
     position: relative;
     box-sizing: border-box;
     color: #FFF;
-    background: #242837;
+    background: #27293A;
     background-clip: padding-box; /* !importanté */
     border: 0.5px solid transparent; /* !importanté */
     // overflow: hidden;
@@ -1604,7 +1604,7 @@ textarea {
       content: '';
       position: absolute;
       top: 0; right: 0; bottom: 0; left: 0;
-      background: $light-300;
+      // background: $light-100;
       border-radius: calc($radius-medium - 0.5px); /* !importanté */
     }
     &:after {
@@ -1650,7 +1650,7 @@ textarea {
       z-index: -1;
       margin: 0.25px; /* !importanté */
       border-radius: calc($radius-medium - 0.5px); /* !importanté */
-      background: #2e3447;
+      background: #27293A;
     }
   }
 }
