--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 1.5rem; 
   line-height: 1.1;
   color: $dark-900; 
-  font-weight: 700;
+  font-weight: 600;
   font-variant-ligatures: none;
   font-family: 'PlusJakartaSans', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
   'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -40,7 +40,7 @@ h2 { font-size: 48px; }
 h3 { font-size: 34px; }
 h4 { font-size: 28px; }
 h5 { font-size: 24px; }
-h6 { font-size: 20px; font-weight: 600; }
+h6 { font-size: 20px; }
 
 h1.display1 {
   font-size: 104px;
