--- a/components/editProfile/EditProfile.module.scss
+++ b/components/editProfile/EditProfile.module.scss
@@ -7,9 +7,9 @@
   background: none;
   border-radius: $radius-medium;
   padding: 16px;
-  &:not(:last-child) {
-    // border-bottom: 1px solid $dark-300;
-  }
+  // &:not(:last-child) {
+  //   // border-bottom: 1px solid $dark-300;
+  // }
   &:hover {
     background: $dark-100;
     text-decoration: none;
@@ -48,4 +48,13 @@
   background-size: cover;
   border-radius: $radius-round;
   // box-shadow: $shadow-2;
+}
+
+.imageWrapper {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+  width: 100%;
+  border-radius: $radius-small;
+  border: 1px solid $dark-300;
 }
