--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -130,8 +130,8 @@
   margin-bottom: 16px;
 }
 .sectionWrapper {
-  padding-top: 160px;
-  padding-bottom: 160px;
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 .primaryBackground {
   background: $primary-900;
