more profile pic fixes

--- a/components/profile/profile.module.scss
+++ b/components/profile/profile.module.scss
@@ -13,6 +13,7 @@
   width: 160px; 
   border-radius: 100%; 
   border: 4px solid white; 
+  object-fit: cover; 
   // box-shadow: $shadow-2;
 }
 .profileCard {
