--- a/public/styles/global.scss
+++ b/public/styles/global.scss
@@ -38,9 +38,9 @@ h1, h2, h3, h4, h5, h6 {
 h1 { font-size: 64px; }
 h2 { font-size: 48px; }
 h3 { font-size: 34px; }
-h4 { font-size: 28px; }
-h5 { font-size: 24px; }
-h6 { font-size: 20px; }
+h4 { font-size: 28px; line-height: 1.3; }
+h5 { font-size: 24px; line-height: 1.2; }
+h6 { font-size: 20px; line-height: 1.2; }
 
 h1.display1 {
   font-size: 104px;
